@@ -1,3 +1,8 @@
+Fri Nov  7 09:11:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * tests/Makefile.am:
+          Removed references to CE_fostream
+
 Thu Nov  6 19:26:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * ace/config-WinCE.h:
